--- a/11_miniProjects/shopping-list-effect/src/index.css
+++ b/11_miniProjects/shopping-list-effect/src/index.css
@@ -32,7 +32,7 @@ body {
 header {
   width: 100%;
   padding: 0 0.25em;
-  background-color: mediumblue;
+  background-color: rgb(0, 89, 205);
   color: aliceblue;
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@ main {
 footer {
   width: 100%;
   padding: 0.25em;
-  background-color: mediumblue;
+  background-color: rgb(0, 72, 205);
   color: aliceblue;
   display: grid;
   place-content: center;
